log
Fri, Mar 21, 2025 11:09:49 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Fri, Mar 21, 2025  4:42:00 PM: 
./test.sh: line 26: gcc: command not found
Compilation failed
ca445db
Fri, Mar 21, 2025  5:31:29 PM: 
 tests:  0|5
total_score: 0/70
a10fd9a
Sat, Mar 22, 2025  4:37:10 PM: 
 exercises.c | 74 ++++++++++++++++++++++++++++++++++++++++++++++++++++++-------
 1 file changed, 66 insertions(+), 8 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:55:9: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
         push_back(L, elemento);
         ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3191e49
